--- a/css/index.css
+++ b/css/index.css
@@ -497,3 +497,71 @@ body {
   text-align: justify;
   padding: 6px 16px 0px 16px;
 }
+#wrap main .about-me-wrap .about-me1 {
+  width: 100%;
+  height: 500vh;
+  margin: 100vh 0;
+  border: 1px solid red;
+}
+#wrap main .about-me-wrap .about-me1 .sticky {
+  position: sticky;
+  top: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+#wrap main .about-me-wrap .about-me1 .sticky .title {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+#wrap main .about-me-wrap .about-me1 .sticky .title h2 {
+  font-size: 50px;
+  letter-spacing: 50px;
+}
+#wrap main .about-me-wrap .about-me1 .sticky .card-frame {
+  position: absolute;
+  width: 95vw;
+  height: 30vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#wrap main .about-me-wrap .about-me1 .sticky .card-frame .card {
+  width: 24%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 5vw;
+  transform-style: preserve-3d;
+  position: relative;
+  transform: perspective(100vw) translateX(100vw) rotateY(180deg);
+}
+#wrap main .about-me-wrap .about-me1 .sticky .card-frame .card .front, #wrap main .about-me-wrap .about-me1 .sticky .card-frame .card .back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 1vw;
+  overflow: hidden;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+#wrap main .about-me-wrap .about-me1 .sticky .card-frame .card .front {
+  background-color: #fff;
+  font-size: 0.5em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+#wrap main .about-me-wrap .about-me1 .sticky .card-frame .card .back {
+  transform: rotateY(180deg);
+  background-color: #e0ded7;
+  background-image: repeating-linear-gradient(0deg, #3b3a38, #3b3a38 33.3%, rgba(255, 255, 255, 0) 0px, rgba(255, 255, 255, 0) 67%);
+}
