--- a/scss/index.scss
+++ b/scss/index.scss
@@ -497,6 +497,83 @@ body {
 
 			} //about-me 
 
+			.about-me1 {
+				width: 100%;
+				height: 500vh;
+				margin: 100vh 0;
+				border: 1px solid red;
+
+				.sticky {
+					position: sticky;
+					top: 0;
+					height: 100vh;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					overflow: hidden;
+
+					.title {
+						width: 100%;
+						position: absolute;
+						top: 50%;
+						left: 50%;
+						transform: translate(-50%, -50%);
+						text-align: center;
+
+						h2 {
+							font-size: 50px;
+							letter-spacing: 50px;
+						}
+					}
+
+					.card-frame {
+						position: absolute;
+						width: 95vw;
+						height: 30vw;
+						display: flex;
+						align-items: center;
+						justify-content: space-between;
+
+						.card {
+							width: 24%;
+							height: 100%;
+							display: flex;
+							align-items: center;
+							justify-content: center;
+							font-size: 5vw;
+							transform-style: preserve-3d;
+							position: relative;
+							transform: perspective(100vw) translateX(100vw) rotateY(180deg);
+						
+							.front, .back {
+								position: absolute;
+								width: 100%;
+								height: 100%;
+								border-radius: 1vw;
+								overflow: hidden;
+								backface-visibility: hidden;
+							}
+					
+							.front {
+								background-color: #fff;
+								font-size: 0.5em;
+								display: flex;
+								align-items: center;
+								justify-content: center;
+								text-align: center;
+							}
+							.back {
+								transform: rotateY(180deg);
+								background-color: #e0ded7;
+								background-image: repeating-linear-gradient(0deg, #3b3a38, #3b3a38 33.3%, #ffffff00 0px, #ffffff00 67%);
+							}
+						
+						}
+			
+					}
+				}
+			}
+
 		} //about-me-wrap
 
 	} // main
