--- a/css/index.css
+++ b/css/index.css
@@ -27,8 +27,98 @@ body {
   background-color: beige;
   box-shadow: 0px 0px 20px 0px #fbadf5;
   position: fixed;
-  z-index: 5;
+  z-index: 9999;
+  left: -100px;
+  transition: all 1s ease-in-out;
 }
+#wrap .side-on {
+  width: 100px;
+  height: 100vh;
+  background-color: beige;
+  box-shadow: 0px 0px 20px 0px #fbadf5;
+  position: fixed;
+  z-index: 9999;
+  left: 0px;
+  transition: all 1s ease-in-out;
+}
+
+#wrap .menu-btn {
+  position: fixed;
+  width: 20px;
+  height: 50px;
+  background-color: #ccc;
+  top: 50%;
+  left: -5px;
+  transform: translateY(-50%);
+  padding: 0px 0px 0px 5px;
+  z-index: 9998;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 1s ease-in-out;
+}
+#wrap .menu-btn::after {
+  content: "";
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(315deg);
+  width: 10px;
+  height: 2px;
+  border-radius: 50%;
+  background-color: black;
+  transition: all 1s ease-in-out;
+}
+#wrap .menu-btn::before {
+  content: "";
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+  width: 10px;
+  height: 2px;
+  border-radius: 50%;
+  background-color: black;
+  transition: all 1s ease-in-out;
+}
+#wrap .btn-on {
+  position: fixed;
+  width: 20px;
+  height: 50px;
+  background-color: #ccc;
+  top: 50%;
+  left: 95px;
+  transform: translateY(-50%);
+  padding: 0px 0px 0px 5px;
+  z-index: 9998;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 1s ease-in-out;
+}
+#wrap .btn-on::after {
+  content: "";
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(225deg);
+  width: 10px;
+  height: 2px;
+  border-radius: 50%;
+  background-color: black;
+  transition: all 1s ease-in-out;
+}
+#wrap .btn-on::before {
+  content: "";
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(135deg);
+  width: 10px;
+  height: 2px;
+  border-radius: 50%;
+  background-color: black;
+  transition: all 1s ease-in-out;
+}
+
 #wrap header {
   width: 100%;
   height: 100vh;
@@ -497,13 +587,13 @@ body {
   text-align: justify;
   padding: 6px 16px 0px 16px;
 }
-#wrap main .about-me-wrap .about-me1 {
+#wrap main .about-me1 {
   width: 100%;
   height: 500vh;
   margin: 100vh 0;
   border: 1px solid red;
 }
-#wrap main .about-me-wrap .about-me1 .sticky {
+#wrap main .about-me1 .sticky {
   position: sticky;
   top: 0;
   height: 100vh;
@@ -512,7 +602,7 @@ body {
   justify-content: center;
   overflow: hidden;
 }
-#wrap main .about-me-wrap .about-me1 .sticky .title {
+#wrap main .about-me1 .sticky .title {
   width: 100%;
   position: absolute;
   top: 50%;
@@ -520,11 +610,11 @@ body {
   transform: translate(-50%, -50%);
   text-align: center;
 }
-#wrap main .about-me-wrap .about-me1 .sticky .title h2 {
+#wrap main .about-me1 .sticky .title h2 {
   font-size: 50px;
   letter-spacing: 50px;
 }
-#wrap main .about-me-wrap .about-me1 .sticky .card-frame {
+#wrap main .about-me1 .sticky .card-frame {
   position: absolute;
   width: 95vw;
   height: 30vw;
@@ -532,18 +622,17 @@ body {
   align-items: center;
   justify-content: space-between;
 }
-#wrap main .about-me-wrap .about-me1 .sticky .card-frame .card {
+#wrap main .about-me1 .sticky .card-frame .card {
   width: 24%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 5vw;
   transform-style: preserve-3d;
   position: relative;
   transform: perspective(100vw) translateX(100vw) rotateY(180deg);
 }
-#wrap main .about-me-wrap .about-me1 .sticky .card-frame .card .front, #wrap main .about-me-wrap .about-me1 .sticky .card-frame .card .back {
+#wrap main .about-me1 .sticky .card-frame .card .front, #wrap main .about-me1 .sticky .card-frame .card .back {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -552,15 +641,55 @@ body {
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
 }
-#wrap main .about-me-wrap .about-me1 .sticky .card-frame .card .front {
+#wrap main .about-me1 .sticky .card-frame .card .front {
   background-color: #fff;
   font-size: 0.5em;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
+  flex-direction: column;
 }
-#wrap main .about-me-wrap .about-me1 .sticky .card-frame .card .back {
+#wrap main .about-me1 .sticky .card-frame .card .front .portrait {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background: no-repeat 50% 25%/100% url(/images/portrait.jpg);
+  top: 5%;
+  position: absolute;
+  filter: drop-shadow(0px 0px 10px rgba(241, 149, 189, 0.8));
+}
+#wrap main .about-me1 .sticky .card-frame .card .front .info-box {
+  display: flex;
+  flex-direction: column;
+  margin-top: 75px;
+}
+#wrap main .about-me1 .sticky .card-frame .card .front .info-box .info-wrap {
+  color: #ccc;
+  display: flex;
+  width: 400px;
+  justify-content: space-between;
+  padding-top: 10px;
+  font-size: 13px;
+}
+#wrap main .about-me1 .sticky .card-frame .card .front .info-box .info-wrap .infoQ .circle {
+  width: 5px;
+  height: 5px;
+  border: 3px solid #ccc;
+  display: inline-block;
+  border-radius: 50%;
+  margin-right: 5px;
+}
+#wrap main .about-me1 .sticky .card-frame .card .front .info-box .info-wrap .infoQ p {
+  display: inline-block;
+  margin-right: 20px;
+  text-transform: capitalize;
+}
+#wrap main .about-me1 .sticky .card-frame .card .front .info-box .info-wrap .infoA {
+  width: 50%;
+  text-align: left;
+}
+#wrap main .about-me1 .sticky .card-frame .card .back {
   transform: rotateY(180deg);
   background-color: #e0ded7;
   background-image: repeating-linear-gradient(0deg, #3b3a38, #3b3a38 33.3%, rgba(255, 255, 255, 0) 0px, rgba(255, 255, 255, 0) 67%);
