--- a/scss/index.scss
+++ b/scss/index.scss
@@ -87,6 +87,7 @@ body {
 
 #wrap {
 	width: 100%;
+	//사이드 메뉴 시작
 
 	.side-menu {
 		width: 100px;
@@ -94,8 +95,108 @@ body {
 		background-color: beige;
 		box-shadow: 0px 0px 20px 0px #fbadf5;
 		position: fixed;
-		z-index: 5;
+		z-index: 9999;
+		left: -100px;
+		transition: all 1s ease-in-out;
 	}
+
+	@at-root #wrap .side-on {
+		width: 100px;
+		height: 100vh;
+		background-color: beige;
+		box-shadow: 0px 0px 20px 0px #fbadf5;
+		position: fixed;
+		z-index: 9999;
+		left: 0px;
+		transition: all 1s ease-in-out;
+	}
+
+	//열림 버튼을 눌렀을 경우
+	.menu-btn {
+		position: fixed;
+		width: 20px;
+		height: 50px;
+		background-color: #ccc;
+		top: 50%;
+		left: -5px;
+		transform: translateY(-50%);
+		padding: 0px 0px 0px 5px;
+		z-index: 9998;
+		border-radius: 5px;
+		cursor: pointer;
+		transition: all 1s ease-in-out;
+
+		&::after {
+			content: "";
+			position: absolute;
+			top: 55%;
+			left: 50%;
+			transform: translate(-50%, -50%) rotate(315deg);
+			width: 10px;
+			height: 2px;
+			border-radius: 50%;
+			background-color: black;
+			transition: all 1s ease-in-out;
+		}
+
+		&::before {
+			content: "";
+			position: absolute;
+			top: 45%;
+			left: 50%;
+			transform: translate(-50%, -50%) rotate(45deg);
+			width: 10px;
+			height: 2px;
+			border-radius: 50%;
+			background-color: black;
+			transition: all 1s ease-in-out;
+		}
+
+		//닫기 버튼을 클릭했을 경우 -default
+		@at-root #wrap .btn-on {
+			position: fixed;
+			width: 20px;
+			height: 50px;
+			background-color: #ccc;
+			top: 50%;
+			left: 95px;
+			transform: translateY(-50%);
+			padding: 0px 0px 0px 5px;
+			z-index: 9998;
+			border-radius: 5px;
+			cursor: pointer;
+			transition: all 1s ease-in-out;
+
+
+			&::after {
+				content: "";
+				position: absolute;
+				top: 55%;
+				left: 50%;
+				transform: translate(-50%, -50%) rotate(225deg);
+				width: 10px;
+				height: 2px;
+				border-radius: 50%;
+				background-color: black;
+				transition: all 1s ease-in-out;
+			}
+	
+			&::before {
+				content: "";
+				position: absolute;
+				top: 45%;
+				left: 50%;
+				transform: translate(-50%, -50%) rotate(135deg);
+				width: 10px;
+				height: 2px;
+				border-radius: 50%;
+				background-color: black;
+				transition: all 1s ease-in-out;
+			}
+		}
+	}
+
+	//사이드 메뉴 끝
 
 	header {
 		width: 100%;
@@ -497,84 +598,120 @@ body {
 
 			} //about-me 
 
-			.about-me1 {
-				width: 100%;
-				height: 500vh;
-				margin: 100vh 0;
-				border: 1px solid red;
 
-				.sticky {
-					position: sticky;
-					top: 0;
-					height: 100vh;
+
+		} //about-me-wrap
+
+		.about-me1 {
+			width: 100%;
+			height: 500vh;
+			margin: 100vh 0;
+			border: 1px solid red;
+
+			.sticky {
+				position: sticky;
+				top: 0;
+				height: 100vh;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				overflow: hidden;
+
+				.title {
+					width: 100%;
+					position: absolute;
+					top: 50%;
+					left: 50%;
+					transform: translate(-50%, -50%);
+					text-align: center;
+
+					h2 {
+						font-size: 50px;
+						letter-spacing: 50px;
+					}
+				}
+
+				.card-frame {
+					position: absolute;
+					width: 95vw;
+					height: 30vw;
 					display: flex;
 					align-items: center;
-					justify-content: center;
-					overflow: hidden;
+					justify-content: space-between;
 
-					.title {
-						width: 100%;
-						position: absolute;
-						top: 50%;
-						left: 50%;
-						transform: translate(-50%, -50%);
-						text-align: center;
-
-						h2 {
-							font-size: 50px;
-							letter-spacing: 50px;
-						}
-					}
-
-					.card-frame {
-						position: absolute;
-						width: 95vw;
-						height: 30vw;
+					.card {
+						width: 24%;
+						height: 100%;
 						display: flex;
 						align-items: center;
-						justify-content: space-between;
-
-						.card {
-							width: 24%;
+						justify-content: center;
+						transform-style: preserve-3d;
+						position: relative;
+						transform: perspective(100vw) translateX(100vw) rotateY(180deg);
+					
+						.front, .back {
+							position: absolute;
+							width: 100%;
 							height: 100%;
+							border-radius: 1vw;
+							overflow: hidden;
+							backface-visibility: hidden;
+						}
+				
+						.front {
+							background-color: #fff;
+							font-size: 0.5em;
 							display: flex;
 							align-items: center;
 							justify-content: center;
-							font-size: 5vw;
-							transform-style: preserve-3d;
-							position: relative;
-							transform: perspective(100vw) translateX(100vw) rotateY(180deg);
-						
-							.front, .back {
-								position: absolute;
-								width: 100%;
-								height: 100%;
-								border-radius: 1vw;
-								overflow: hidden;
-								backface-visibility: hidden;
+							text-align: center;
+							flex-direction: column;
+
+							.portrait {
+								width: 200px;
+								height: 200px;
+								border-radius: 50%;
+								background: no-repeat 50% 25%/100% url(/images/portrait.jpg);
+								top: 5%;
+
+								@include neon_line;
 							}
-					
-							.front {
-								background-color: #fff;
-								font-size: 0.5em;
+
+							.info-box {
 								display: flex;
-								align-items: center;
-								justify-content: center;
-								text-align: center;
+								flex-direction: column;
+								margin-top: 75px;
+
+								.info-wrap {
+									color: #ccc;
+									display: flex;
+									width: 400px;
+									justify-content: space-between;
+									padding-top: 10px;
+									font-size: 13px;
+	
+									@include circle;
+	
+	
+									.infoA {
+										width: 50%;
+										text-align: left;
+									}
+								}
 							}
-							.back {
-								transform: rotateY(180deg);
-								background-color: #e0ded7;
-								background-image: repeating-linear-gradient(0deg, #3b3a38, #3b3a38 33.3%, #ffffff00 0px, #ffffff00 67%);
-							}
-						
 						}
-			
+
+						.back {
+							transform: rotateY(180deg);
+							background-color: #e0ded7;
+							background-image: repeating-linear-gradient(0deg, #3b3a38, #3b3a38 33.3%, #ffffff00 0px, #ffffff00 67%);
+						}
+					
 					}
+		
 				}
 			}
-
-		} //about-me-wrap
+		}
 
 	} // main
 
